fix: [ui:select2] Fixed z-index issue
By attaching it to the modal body if applicable

--- a/webroot/css/main.css
+++ b/webroot/css/main.css
@@ -94,7 +94,7 @@ input[type="checkbox"]:disabled.change-cursor {
 }
 
 .select2-container {
-    z-index: 1056;
+    z-index: 900;
 }
 
 .select2-container--bootstrap-5 {
